--- a/index.html
+++ b/index.html
@@ -40,11 +40,9 @@
             <div class="rules">           
                 <h3>PIG GAME RULES:</h3>
                 <p>The game has 2 players and is played in rounds. In each turn, a player rolls two dices
-                as many times as he whishes. Each result get added to his current score. But, if the 
-                player rolls a 1, all his current score gets lost. After that, it's the next player's 
-                turn. The player can choose to 'Hold', which means that his current score gets added 
-                to his global score. After that, it's the next player's turn. The first player to
-                reach 100 points on global score wins the game.</p>
+                as many times as he whishes. Each result get added to his current score. The player can choose to 'Hold', 
+                    which means that his current score gets added to his global score. But, if the player rolls a 1 before he hold, all his current score gets lost. 
+                    After that, it's the next player's turn. The first player to reach 100 points on global score wins the game.</p>
             </div>
 
         </div>
